@@ -1,6 +1,9 @@
 package io.ngshop.catalog.service.impl;
 
 import io.ngshop.catalog.dto.ProductDTO;
+import io.ngshop.catalog.dto.response.ProductResponse;
+import io.ngshop.catalog.exception.NotFoundException;
+
 import io.ngshop.catalog.mapper.ProductMapper;
 import io.ngshop.catalog.model.Product;
 import io.ngshop.catalog.repository.ProductRepository;
@@ -11,7 +14,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -20,31 +23,58 @@ public class ProductServiceImpl implements ProductService {
     private final ProductMapper productMapper;
 
     @Override
-    public ResponseEntity<ProductDTO> createProduct(ProductDTO productDto) {
+    public ResponseEntity<ProductDto> create(ProductDto productDto) {
         Product product = productMapper.toEntity(productDto);
         Product save = productRepository.save(product);
         return ResponseEntity.ok(productMapper.toDto(save));
     }
 
-    @Override
-    public ResponseEntity<ProductDTO> getProductById(ObjectId id) {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<List<ProductDTO>> getAllProducts() {
+    public ResponseEntity<List<ProductDto>> getProducts() {
         List<Product> all = productRepository.findAll();
-        List<ProductDTO> list = all.stream().map(productMapper::toDto).collect(Collectors.toList());
+        List<ProductDto> list = all.stream().map(productMapper::toDto).toList();
         return ResponseEntity.ok(list);
     }
 
     @Override
-    public ResponseEntity<ProductDTO> updateProduct(ProductDTO productDTO) {
-        return null;
+
+    public ResponseEntity<ProductResponse> getByName(String productName) {
+        List<Product> products = productRepository.findByName(productName);
+        return ResponseEntity.ok(ProductResponse.builder().data(products.stream().map(productMapper::toDto).toList()).count(products.size()).build());
     }
 
     @Override
-    public ResponseEntity<Void> deleteProduct(Long id) {
-        return null;
+    public ResponseEntity<ProductResponse> getAllProducts(Optional<String> pageIndex, Optional<String> pageSize, Optional<String> brandId, Optional<String> typeId, Optional<String> sort, Optional<String> search) {
+        ProductResponse withPagination = productRepository.findAllWithPagination(pageIndex, pageSize, brandId, typeId, sort, search);
+        return ResponseEntity.ok(withPagination);
+    }
+
+    @Override
+    public ResponseEntity<ProductResponse> getProductByBrandName(String brand) {
+        List<Product> products = productRepository.findByBrandName(brand);
+        return ResponseEntity.ok(ProductResponse.builder().data(products.stream().map(productMapper::toDto).toList()).count(products.size()).build());
+    }
+
+    @Override
+    public ResponseEntity<ProductDTO> create(ProductDTO productDTO) {
+        productDTO.setName(productDTO.getName().toLowerCase());
+        Product product = productMapper.toEntity(productDTO);
+        Product save = productRepository.save(product);
+        return ResponseEntity.ok(productMapper.toDto(save));
+    }
+
+    @Override
+    public ResponseEntity<ProductDTO> update(ProductDTO productDTO, String productId) {
+        productDTO.setName(productDTO.getName().toLowerCase());
+        productRepository.findById(CommonService.checkObjectId(productId)).orElseThrow(() -> new NotFoundException("Product not found"));
+        Product entity = productMapper.toEntity(productDTO);
+        Product save = productRepository.save(entity);
+        return ResponseEntity.ok(productMapper.toDto(save));
+    }
+
+    @Override
+    public ResponseEntity<Void> delete(String id) {
+        Product product = productRepository.findById(CommonService.checkObjectId(id)).orElseThrow(() -> new NotFoundException("Product not found"));
+        productRepository.delete(product);
+        return ResponseEntity.ok().build();
     }
 }
